# breadcrumbs

./: README.md  breadcrumbs.cabal  doctest.hs
Data/: Breadcrumbs.hs
Data/Breadcrumbs/: Caterpillar.hs  DropList.hs  IO.hs  Internal.hs  Seq.hs  Test.hs
breadcrumbs-simple/: breadcrumbs-simple.cabal
breadcrumbs-simple/Data/Breadcrumbs/: Deque.hs  DropList.hs  Flips.hs  List.hs
breadcrumbs-simple/test/: memtest.hs
test/: memtest.hs  seqbench.hs
