name:                breadcrumbs
version:             0.1.0.0
synopsis:            Persistent bounded buffers
-- description:         
license:             MIT
license-file:        LICENSE
author:              Li-yao Xia
maintainer:          lysxia@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    Data.Breadcrumbs
    Data.Breadcrumbs.Internal
    Data.Breadcrumbs.IO
  build-depends:
    base >=4.9 && <4.10
  default-language:    Haskell2010

test-suite doctest
  main-is: doctest.hs
  type: exitcode-stdio-1.0
  build-depends:
    base,
    doctest
  default-language:    Haskell2010
