name:                breadcrumbs
version:             0.1.0.0
synopsis:            Persistent bounded buffers
-- description:         
license:             MIT
license-file:        LICENSE
author:              Li-yao Xia
maintainer:          lysxia@gmail.com
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:
    Data.Breadcrumbs
    Data.Breadcrumbs.Internal
    Data.Breadcrumbs.IO
    Data.Breadcrumbs.List
    Data.Breadcrumbs.DropList
    Data.Breadcrumbs.Seq
    Data.Breadcrumbs.Deque
    Data.Breadcrumbs.Flips
    Data.Breadcrumbs.Test
  build-depends:
    base >=4.9 && <4.10,
    containers
  default-language:    Haskell2010

test-suite doctest
  main-is: doctest.hs
  type: exitcode-stdio-1.0
  build-depends:
    base,
    doctest
  default-language:    Haskell2010

test-suite memtest
  main-is: memtest.hs
  hs-source-dirs: test
  type: exitcode-stdio-1.0
  build-depends:
    base,
    process,
    breadcrumbs
  ghc-options: "-with-rtsopts=-M500k -A30k"
  default-language:    Haskell2010

benchmark seqbench
  main-is: seqbench.hs
  hs-source-dirs: test
  type: exitcode-stdio-1.0
  build-depends:
    base,
    criterion,
    breadcrumbs
  default-language:    Haskell2010
