name:                breadcrumbs-simple
version:             0.1.0.0
synopsis:            Other implementations of persistent bounded buffers
license:             MIT
author:              Li-yao Xia
maintainer:          lysxia@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    Data.Breadcrumbs.List
    Data.Breadcrumbs.DropList
    -- Data.Breadcrumbs.Seq
  build-depends:
    base >=4.9 && <4.10
  default-language:    Haskell2010

test-suite memtest
  main-is: memtest.hs
  hs-source-dirs: test
  type: exitcode-stdio-1.0
  build-depends:
    base,
    process,
    breadcrumbs,
    breadcrumbs-simple
  ghc-options: "-with-rtsopts=-M500k -A30k"
  default-language:    Haskell2010
